# hello_main

./: .gitignore  Cargo.toml
cli_app/: .env  Cargo.toml  config.json
cli_app/sqlx/: schema.sql
cli_app/src/: apperr.rs  lib.rs  main.rs  model.rs  settings.rs  shutdown.rs
cli_app/src/api/: mod.rs  v1.rs
cli_app/src/api/handlers/: hello.rs  login.rs  mod.rs  posts.rs  users.rs
cli_app/src/api/middleware/: auth.rs  mod.rs  trace.rs
cli_app/src/api/request/: mod.rs  post.rs  user.rs
cli_app/src/api/response/: login.rs  mod.rs  post.rs  user.rs
cli_app/src/commands/: hello.rs  mod.rs  serve.rs
cli_app/src/services/: post.rs  user.rs
cli_app/src/state/: mod.rs
cli_app/src/utils/: password.rs
src/: lib.rs  main.rs
src/settings/: mod.rs  setting.rs
