[package]
name = "hello_main"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"

members=[
 "cli_app"
 ]


[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
config = "0.15.4"
rand = "0.8.5"
serde = "1.0.217"
serde_json = "1.0.135"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["catch-panic"] }
