[package]
name = "cli_app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
arc-swap = "1.7.1"
axum = "0.8.1"
clap = "4.5.24"
config = "0.15.4"
dotenv = "0.15.0"
serde ={version= "1.0.217",features=["derive"]}
tokio = {version="1.42.0",features=["full"]}
tracing={version="0.1.41",features=["log"]}
tracing-log = {version="0.2"}
tracing-subscriber = {version="0.3.19",features=["registry","env-filter"]}
tower-http = {version="0.6.2",features=["trace"]}
chrono ={version="0.4.30",features=["serde"]}
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
